--- a/ciclo3back/src/main/resources/templates/Home.html
+++ b/ciclo3back/src/main/resources/templates/Home.html
@@ -16,7 +16,7 @@
     <form action="/Home/LogIn/Menu" method="post">
         <fieldset id="UserSignInForm">
 
-            <label for="SingInUser" class="UserAndPasswordLabel">Usuario:</label> <br />
+            <label for="SingInUser" class="UserAndPasswordLabel">Usuario1:</label> <br />
             <input type="text" name="userAcount" id="SingInUser" />
             <br /> <br />
 
